# BFppCompiler

./: .gitignore  CMakeLists.txt  README.md  getArguments.cpp  getArguments.h
brainfuck/: tests.b
brainfuck/libraries/: text.b
brainfuck/moreExamples/: debugTest.b  morpion.b  someincludes.b  yes.b
examples/: debugTest.b  functions.b  includeTest.b  yes.bf
sources/: bfToCpp.cpp  bfToCpp.h  bfppFunction.cpp  bfppFunction.h  getArguments.cpp  main.cpp
